book/chap07/commands_07.txt
### Chapter 7, More Abstraction


# Polymorphism and Methods
>>> from random import choice
>>> x = choice(['Hello, world!', [1, 2, 'e', 'e', 4]])
>>> x.count('e')
2

>>> 1+2
3
>>> 'Fish' + 'license'
'Fishlicense'
>>>
>>> def add(x, y):
...     return x+y
...
>>> add(1, 2)
3
>>> add('Fish', 'license')
'Fishlicense'
>>> lista = ['one', 'two', 'three']
>>> listb = ['four', 'five', 'six']
>>> add(lista, listb)
['one', 'two', 'three', 'four', 'five', 'six']

>>> def length_message(x):
...     print('The length of {} is {}'.format(repr(x), len(x)))
...
>>> length_message('Fnord')
The length of 'Fnord' is 5
>>> length_message([1, 2, 3])
The length of [1, 2, 3] is 3


# Encapsulation
## Note that class OpenObject needs to be created first
>>> o = OpenObject()
>>> o.setName('Sir Lancelot')
>>> o.getName()
'Sir Lancelot'
>>> globalName
'Sir Lancelot'
>>> globalName = 'Sir Gumby'
>>> o.getName()
'Sir Gumby'
>>> o1 = OpenObject()
>>> o2 = OpenObject()
>>> o1.setName('Robin Hood')
>>> o2.getName()
'Robin Hood'

### with attributes instead of methods...
>>> c = ClosedObject()
>>> c.setName('Sir Lancelot')
>>> c.getName()
'Sir Lancelot'
>>> r = ClosedObject()
>>> r.setName('Sir Robin')
>>> r.getName()
'Sir Robin'
>>> c.getName()
'Sir Lancelot'


# Making Your Own Classes
>>> class Person:
...     def setName(self, name):
...             self.name = name
...     def getName(self):
...             return self.name
...     def greet(self):
...             print("Hello, world! I'm {}.".format(self.name))
...
>>> foo = Person()
>>> bar = Person()
>>> foo.setName('Luke Skywalker')
>>> bar.setName('Anakin Skywalker')
>>> foo.greet()
Hello, world! I'm Luke Skywalker.
>>> bar.greet()
Hello, world! I'm Anakin Skywalker.
>>> foo.name
'Luke Skywalker'
>>> bar.name = 'Yoda'
>>> bar.greet()
Hello, world! I'm Yoda.
>>> Person.greet(foo)
Hello, world! I'm Luke Skywalker.


# Attributes, Functions, and Methods
>>> class Class:
...     def method(self):
...             print('I have a self!')
...
>>> def function():
...     print("I don't...")
...
>>> instance = Class()
>>> instance.method()
I have a self!
>>> instance.method = function
>>> instance.method()
I don't...
>>>
>>> class Bird:
...     song = 'Squaak!'
...     def sing(self):
...             print(self.song)
...
>>> bird = Bird()
>>> bird.sing()
Squaak!
>>> birdsong = bird.sing
>>> birdsong()
Squaak!


# Privacy Revisited
>>> class Secretive:
...     def __inaccessible(self):
...         print("Bet you can't see me...")
...     def accessible(self):
...         print("The secret message is:")
...         self.__inaccessible()
...
>>> s = Secretive()
>>> s.__inaccessible()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'Secretive' object has no attribute '__inaccessible'
>>> s.accessible()
The secret message is:
Bet you can't see me...
>>> Secretive._Secretive__inaccessible
<function Secretive.__inaccessible at 0x7f426a9a3510>
>>> s._Secretive__inaccessible()
Bet you can't see me...


# The Class Namespace
## The two following statements are essentially equivalent:
>>> def foo(x): return x*x
...
>>> foo = lambda x: x*x

>>> class C:
...     print('Class C being defined...')
...
Class C being defined...
>>> class MemberCounter:
...     members = 0
...     def init(self):
...         MemberCounter.members += 1
...
>>> m1 = MemberCounter()
>>> m1.init()
>>> MemberCounter.members
1
>>> m2 = MemberCounter()
>>> m2.init()
>>> MemberCounter.members
2
>>> mj = MemberCounter
>>> mj.members
2
>>> m1.members
2
>>> m2.members
2
>>> m1.members = 'Two'
>>> m1.members
'Two'
>>> m2.members
2


# Specifing a Superclass
>>> class Filter:
...     def init(self):
...         self.blocked = []
...     def filter(self, sequence):
...         return [x for x in sequence if x not in self.blocked]
...
>>> class SPAMFilter(Filter):  # SPAMFilter is a subclass of Filter
...     def init(self):  # Overrides init method from Filter superclass
...         self.blocked = ['SPAM']
...
>>> f = Filter()
>>> f.init()
>>> f.filter(['SPAM', 'SPAM', 'SPAM', 'SPAM', 'eggs', 'bacon', 'SPAM'])
['SPAM', 'SPAM', 'SPAM', 'SPAM', 'eggs', 'bacon', 'SPAM']
>>> f.filter([1, 2, 3])
[1, 2, 3]
>>> s = SPAMFilter()
>>> s.init()
>>> s.filter(['SPAM', 'SPAM', 'SPAM', 'SPAM', 'eggs', 'bacon', 'SPAM'])
['eggs', 'bacon']


# Investigating Inheritance
>>> issubclass(SPAMFilter, Filter)
True
>>> issubclass(Filter, SPAMFilter)
False
>>> SPAMFilter.__bases__
(<class '__main__.Filter'>,)
>>> Filter.__bases__
(<class 'object'>,)
>>> isinstance(s, SPAMFilter)
True
>>> isinstance(s, Filter)
True
>>> isinstance(s, str)
False
>>> s.__class__
<class '__main__.SPAMFilter'>
>>> "Hello World".__class__
<class 'str'>
>>> 4.__class__
  File "<stdin>", line 1
    4.__class__
              ^
SyntaxError: invalid syntax
>>> jason = 35
>>> jason.__class__
<class 'int'>
>>> jason = 35.3
>>> jason.__class__
<class 'float'>
>>> type(s)
<class '__main__.SPAMFilter'>
>>> type(5)
<class 'int'>
>>> type(3.5)
<class 'float'>
>>> type('Hello world!')
<class 'str'>


# Multiple Superclasses
